# masterproject

./: CMakeLists.txt  README.txt  README_equations_of_motion  requirements.txt  setup.py  testpybind.py
functions/: JR_1_1.cpp  JR_1_1.h  JR_1_1_taylor.cpp  JR_1_1_taylor.h  JR_2_1.cpp  JR_2_1.h  JR_2_2.cpp  JR_3_1.cpp  JR_3_1.h  JR_3_2.cpp  JR_3_2.h  JR_3_3.cpp  JR_3_3.h  JT_1_1.cpp  JT_1_1.h  JT_1_1_taylor.cpp  JT_1_1_taylor.h  JT_2_1.cpp  JT_2_1.h  JT_2_2.cpp  JT_2_2.h  JT_3_1.cpp  JT_3_1.h  JT_3_2.cpp  JT_3_2.h  JT_3_3.cpp  JT_3_3.h  M_1_1.cpp  M_1_1.h  M_1_1_taylor.cpp  M_1_1_taylor.h  a_1_1.cpp  a_1_1.h  a_1_1_taylor.cpp  a_1_1_taylor.h  a_2_1.cpp  a_2_2.cpp  a_3_1.cpp  a_3_1.h  a_3_2.cpp  (+37 more)
functions/old/: JR_1_1.cpp  JR_1_1.h  JR_2_1.cpp  JR_2_2.cpp  JR_2_2.h  JR_3_1.cpp  JR_3_1.h  JR_3_2.cpp  JR_3_2.h  JR_3_3.cpp  JR_3_3.h  JT_1_1.cpp  JT_1_1.h  JT_2_1.cpp  JT_2_2.cpp  JT_3_1.cpp  JT_3_1.h  JT_3_2.cpp  JT_3_2.h  JT_3_3.cpp  JT_3_3.h  a_1_1.cpp  a_1_1.h  a_2_1.cpp  a_2_1.h  a_2_2.cpp  a_2_2.h  a_3_1.cpp  a_3_1.h  a_3_2.cpp  a_3_2.h  a_3_3.cpp  a_3_3.h  alpha_1_1.cpp  alpha_1_1.h  alpha_2_1.cpp  alpha_2_1.h  alpha_2_2.cpp  alpha_2_2.h  alpha_3_1.cpp  (+17 more)
motionlib.egg-info/: PKG-INFO  SOURCES.txt
src/: binder.cpp
